feat: added pagination to get users
Added new fields to user model
